# hoblix-ai

./: .gitignore  README.md  package-lock.json  package.json
backend/: .env.example  Dockerfile  README.md  create_db_structure.py  pyproject.toml  requirements.txt  setup.py
backend/app/: main.py
backend/app/api/: auth.py  auth_test.py  booking.py  chat.py  conversation.py  me.py  onboarding.py  user.py
backend/app/auth/: auth_service.py  dependencies.py  generate_token.py  google_auth_service.py  jwt_handler.py
backend/app/booking/: availability_service.py  booking_details.py  booking_service.py  extractor.py  parser.py  schemas.py
backend/app/chat/: chat_manager.py  conversation_service.py  general_service.py  intent_router.py
backend/app/core/: config.py
backend/app/database/: create_tables.py  session.py
backend/app/llm/: llm_service.py  test.py
backend/app/models/: __init__.py  booking.py  conversation.py  message.py  onboarding_state.py  profile.py  user.py
backend/app/onboarding/: config.py  correction_detector.py  correction_service.py  db_service.py  onboarding_manager.py  parsers.py  service.py  state_service.py  test.py  workflow.py
backend/app/rag/: ingest.py  prompt_builder.py  rag_service.py  retriever.py  test.py
backend/app/schemas/: auth.py  booking.py  conversation.py  google_auth.py  onboarding.py  profile.py  user.py
backend/knowledge_base/: chunks.npy  extracted_text.txt  index.faiss
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/hooks/: useAuth.ts  useBookings.ts  (+2 more)
(+46 files in other folders)
